# meowpowminer

./: CMakeLists.txt  CODEOWNERS  README.md  appveyor.yml  circle.yml
docs/: API_DOCUMENTATION.md  BUILD.md  POOL_EXAMPLES_ETH.md
libapicore/: ApiServer.cpp  CMakeLists.txt
libcrypto/: ethash.hpp  progpow.cpp  progpow.hpp
libethash-cl/: CLMiner.cpp  CLMiner_kernel.cl
libethash-cpu/: CPUMiner.cpp
libethash-cuda/: CMakeLists.txt  CUDAMiner.cpp  CUDAMiner_kernel.cu
libethcore/: Farm.cpp  Farm.h  Miner.h
libpoolprotocols/: CMakeLists.txt  PoolURI.cpp
libpoolprotocols/stratum/: EthStratumClient.cpp
libpoolprotocols/testing/: SimulateClient.cpp
meowpowminer/: CMakeLists.txt  main.cpp  meowpowminer.rc
scripts/: testpools.bash
